# TypicalGtkmmApp

./: .gitignore  CHANGELOG.txt  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Makefile  README.txt  TypicalGtkmmApp.cpp  TypicalGtkmmApp.h  TypicalGtkmmApp_res.rc  TypicalGtkmmApp_res.rc.in  config.h  stdafx.cpp  stdafx.h  targetver.h
projects/: Makefile.clang++32  Makefile.clang++64  Makefile.g++32  Makefile.g++64  Makefile.mingw32  Makefile.mingw64  Makefile.msys32  Makefile.msys64
